# v1.0.0.6 - 10-14-2025
- Update slick_queue to v1.1.0.0

# v1.0.0.5 - 10-03-2025
- Support char* logging argument to avoid build error.

# v1.0.0.4 - 10-02-2025
- Fix critical DailyFileSink bug: prevent file overwrites on program restart
  - Remove current_day_index_ member to eliminate restart index reset issue
  - Add rotate_files_for_date() helper function to properly rotate existing files
  - Implement startup rotation check in constructor to handle old log files
  - Fix max_files enforcement to prevent creating files beyond the limit
  - Support max_file_size=0 to disable size-based rotation
  - Proper handling of dated files as index 0 with indexed files starting from _001
- Add comprehensive unit tests for DailyFileSink rotation scenarios
  - Test size rotation with max_files limit enforcement
  - Test restart scenarios with old files from previous days
  - Test restart with existing rotated files to prevent overwrites

# v1.0.0.3 - 10-01-2025
- upgrade slick_queue to v1.0.2.1

# v1.0.0.2 - 09-29-2025
- upgrade slick_queue to v1.0.2.0 

# v1.0.0.1 - 09-29-2025
- fix arg_count for dynamic format strings

# v1.0.0.0 - 09-27-2025
- Major performance optimization: avoid dynamic allocations in logging path
  - Refactor logging engine to use pre-allocated argument storage
  - Add separate string queue for efficient dynamic string handling
  - Introduce typed argument system with improved format string detection
  - Add SLICK_LOGGER_MAX_ARGS define (default: 20) for argument limit
- Fix Linux build issues
- Update benchmark

# v0.2.0.0 - 09-23-2025
- Add dedicated sink functionality: sinks with dedicated flag set to true only receive messages logged directly to them, not broadcast messages from LOG_* macros
- Improve sink-level log filtering documentation and examples
- Update slick_queue to v1.0.1.2

# v0.1.1.1 - 09-16-2025
- Fixed x86 build warning

# v0.1.1.0 - 09-12-2025
- Change organization name

# v0.1.0.3 - 09-08-2025