@@ -1,5 +1,7 @@
 # v1.0.0.6 - 10-14-2025
 - Update slick_queue to v1.1.0.0
+- Added GitHub CI workflow for automated testing across Ubuntu, Windows, and macOS
+- Added CI status badge to README
 
 # v1.0.0.5 - 10-03-2025
 - Support char* logging argument to avoid build error.
